[package]
name = "match3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.2"
clearscreen = "3.0.0"
colored = "2.1.0"
itertools = "0.12.1"
rand = "0.8.5"
rand_derive2 = "0.1.21"
text_io = "0.1.12"
